# bsuir-helper-graph-data-loader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/bsuir-helper-graph-data-loader/: __main__.py  config.py  models.py  schemas.py  utils.py
src/bsuir-helper-graph-data-loader/file/: config.py  dependencies.py  models.py  router.py  schemas.py  services.py
src/bsuir-helper-graph-data-loader/knowledge_base/: config.py  dependencies.py  router.py  schemas.py  services.py
